# acelab-technical-challenge

./: .env.example  .gitignore  README.md  pyproject.toml
acelab/: __init__.py  _base.py  client.py  exceptions.py  models.py  resources.py  sync_client.py  sync_resources.py
examples/: basic_usage.py  probe.py  probe_companies.py  probe_market_status.py
src/: __init__.py  agent.py  api.py  cli.py  llm.py  render.py  schemas.py
src/stages/: __init__.py  ground.py  rank.py  search.py  understand.py
tests/: test_api.py  test_e2e.py  test_stages.py  validation_set.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css
web/src/components/: CriteriaEditor.tsx  GroundingReview.tsx  RecommendationCard.tsx  SearchBox.tsx  StageSidebar.tsx  ui.tsx
web/src/lib/: api.ts  examples.ts  types.ts
