[project]
name = "acelab-takehome"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "openai>=1.55.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["acelab", "src"]

[tool.pytest.ini_options]
markers = [
    "e2e: end-to-end tests that hit live APIs (slow, costs credits)",
]
